CNN_Table_Detection/test_47484.log
  File "/iitjhome/m22ma003/CV_Project/table_detection.py", line 37
    !unzip /content/drive/MyDrive/CV_Project2/table_data.zip
    ^
SyntaxError: invalid syntax
